manifests/dev/bookorbit/Service-bookorbit.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookorbit
  namespace: bookorbit
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: bookorbit
    app.kubernetes.io/name: bookorbit
  type: ClusterIP
