manifests/dev/bookorbit/Ingress-bookorbit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: bookorbit
  namespace: bookorbit
spec:
  ingressClassName: traefik
  rules:
    - host: bookorbit.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: bookorbit
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - bookorbit.home.kronkltd.net
      secretName: bookorbit-tls
